# University

./: .gitignore
SEM4/AiSD/graph-adjacency-matrix/: Makefile
SEM4/AiSD/pqueue/: Makefile  main.cpp  pqueue.hpp
SEM4/AiSD/safes/: Makefile
SEM4/AiSD/safes_2/: Makefile
SEM4/AiSD/set/: set.hpp
SEM4/fortran/myproject/: graphmodule.mod  main.f95
SEM4/linux/01_06/: server.c
SEM4/linux/25_05/: Makefile  f  f1.c  f2.c  f3.c  result.txt
SEM4/utils/: voltageCalculator.py
SEM4/visualization/otodom/: data.json
sem-4/AiSD/safes_list/: README.md
sem-4/AiSD/set/: Makefile  main.cpp  test_set.hpp
sem-4/visualization/otodom/: data.py  plot.py
sem-5/data_bases/: Kolos.db  Kolos.mwb  kolos.sql  test.db
sem-5/python/assignment-1/: hello.py  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
sem-5/python/assignment-2/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
sem-5/python/assignment-3/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  tramwaje_out.json
sem-5/python/assignment-4/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
sem-5/python/assignment-5/: base.py  task_1.py  task_2.py  task_3.py
sem-5/python/assignment-6/: athlete_sort.py  ginortS.py  matrix_script.py  maximize_it.py  reduce_function.py
sem-5/python/assignment-7/: animateSort.py  measureAlgorithms.py  measurements.txt  monitoredArray.py  sortingAlgorithms.py
sem-5/python/assignment-8/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
sem-6/programowanie_sieciowe/web_scraping/: pyproject.toml
sem-6/programowanie_sieciowe/web_scraping/src/: app.py
(+219 files in other folders)
